--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div class="txt">祝小鱼快乐！</div>
+<div class="txt">祝宝快乐！</div>
 <div class="container">
 	<div class="tree">
 		<div class="shadow ts-3d"></div>
