--- a/index.html
+++ b/index.html
@@ -58,3 +58,36 @@
 </div>
 </body>
 </html>
+<script src="public.js"></script>
+<script>
+	//页面打开后  出现不同大小  不同位置的 星星    
+	//大小随机   位置随机
+	//通过定时器方式 不停的创建星星
+	//页面加载事件
+	window.onload = function(){
+		setInterval( function(){
+			//创建一张图片
+			var oImg = document.createElement("img");
+			oImg.src = "star.gif";
+			//将oImg 添加到 body中  
+			document.body.appendChild( oImg );
+			//设置图片的宽度和高度 随机值    宽度 = 高度
+			var randWidth = rand(10,50);
+			//属性操作   没有单位
+			oImg.width = randWidth;
+			oImg.height = randWidth;
+			
+			//改变位置  先为oImg设置绝对定位
+			oImg.style.position = "absolute";
+			//window.innerWidth 获取浏览器窗口的宽度  window.innerHeight 获取浏览器窗口的高度
+			oImg.style.left = rand(0,window.innerWidth-randWidth) + "px";
+			oImg.style.top = rand(0,window.innerHeight-randWidth) + "px";
+			
+			//为创建的元素添加单击事件
+			oImg.onclick = function(){
+				console.log(this)
+				this.remove();
+			}
+		}, 1000 )
+	}
+</script>
